--- a/AUTHORS
+++ b/AUTHORS
@@ -14,3 +14,6 @@ endorse this project in any way.
 - The fantastic people in #powerdns IRC channel on OFTC (irc.oftc.net),
   especially Habbie, Maik, ahu for their help and support. Thanks folks!
 
+- Pieter Lexis (pieterlexis)
+- Philipp Hossner (phihos)
+- Dominick Rivard (drivard)
