Added Dan Morrison to contributors list for contributing a Django 1.7.X compatibility patch.

--- a/AUTHORS
+++ b/AUTHORS
@@ -17,3 +17,4 @@ endorse this project in any way.
 - Pieter Lexis (pieterlexis)
 - Philipp Hossner (phihos)
 - Dominick Rivard (drivard)
+- Dan Morrison
